--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\Kevin PC\\AppData\\Roaming\\NetBeans\\12.5\\tomcat90.properties
 j2ee.server.home=D:/Server/apache-tomcat-9.0.58
 j2ee.server.instance=tomcat90:home=D:\\Server\\apache-tomcat-9.0.58
-selected.browser=Chrome.INTEGRATED
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Kevin PC\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
